syntax = "proto3";

package api.battle.v1;

option go_package = "terraria/api/battle/v1;v1";

service Weapon {
    rpc CreateWeapon(CreateWeaponRequest) returns (CreateWeaponReply);
    rpc UpdateWeapon(UpdateWeaponRequest) returns (UpdateWeaponReply);
    rpc DeleteWeapon(DeleteWeaponRequest) returns (DeleteWeaponReply);
    rpc GetWeapon(GetWeaponRequest) returns (GetWeaponReply);
    rpc ListWeapon(ListWeaponRequest) returns (ListWeaponReply);
}

message CreateWeaponRequest {
    string name = 1;
}
message CreateWeaponReply {
    uint64 id = 1;
}

message UpdateWeaponRequest {
    uint64 id   = 1;
    string name = 2;
}
message UpdateWeaponReply {}

message DeleteWeaponRequest {
    uint64 id = 1;
}
message DeleteWeaponReply {}

message GetWeaponRequest {
    uint64 id = 1;
}
message GetWeaponReply {
    string name = 2;
}

message ListWeaponRequest {}
message ListWeaponReply {
    message Data {
        uint64 id   = 1;
        string name = 2;
    }
    repeated Data data = 1;
}